[gd_scene load_steps=82 format=2]

[ext_resource path="res://entities/enemies/vargas.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/characters/vargas/vargas.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/shadow.png" type="Texture" id=3]
[ext_resource path="res://states/state_machine.gd" type="Script" id=4]
[ext_resource path="res://entities/enemies/vargas_state.gd" type="Script" id=5]
[ext_resource path="res://assets/shaders/whiteout.gdshader" type="Shader" id=6]
[ext_resource path="res://entities/enemies/seek_state.gd" type="Script" id=7]
[ext_resource path="res://entities/enemies/leap_state.gd" type="Script" id=8]
[ext_resource path="res://assets/sfx/VARGAS_FIGHT_INTRO.wav" type="AudioStream" id=9]
[ext_resource path="res://entities/enemies/fire_projectile_state.gd" type="Script" id=10]
[ext_resource path="res://assets/sfx/VARGAS_ENEMY_DEATH.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/VARGAS_PLAYER_DEATH.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/MJ5 SFX - Man Atk 3.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/MJ5 SFX - Hurt 1.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/MJ5 SFX - Hurt 3.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/MJ5 SFX - Hurt 7.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/MJ5 SFX - Hurt 5.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/MJ5 SFX - Thud or Roll.wav" type="AudioStream" id=18]

[sub_resource type="ShaderMaterial" id=36]
shader = ExtResource( 6 )
shader_param/color = Color( 1, 0, 0, 1 )
shader_param/amount = 0.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 32.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=37]
resource_name = "death"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 5, 2 ), Vector2( -5, 0 ), Vector2( 5, -2 ), Vector2( -5, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_down"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_left"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_right"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_up"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=42]
resource_name = "leap_down"
length = 1.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.25, 0.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=44]
resource_name = "leap_left"
length = 1.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.25, 0.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "leap_right"
length = 1.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.25, 0.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "leap_up"
length = 1.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.25, 0.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "throw_down"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "throw_left"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "throw_right"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "throw_up"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=38]
resource_name = "walk_down"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=41]
resource_name = "walk_left"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=40]
resource_name = "walk_right"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=39]
resource_name = "walk_up"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=17]
blend_point_0/node = SubResource( 28 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 29 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 30 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 31 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "leap_left"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "leap_up"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "leap_right"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "leap_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 25 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 26 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "throw_left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "throw_up"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "throw_right"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "throw_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "walk_up"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "walk_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=56]
blend_point_0/node = SubResource( 52 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 53 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 54 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 55 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachine" id=15]
states/death/node = SubResource( 45 )
states/death/position = Vector2( 740, 94 )
states/idle/node = SubResource( 17 )
states/idle/position = Vector2( 195, 3 )
states/leap/node = SubResource( 27 )
states/leap/position = Vector2( 674, 399 )
states/throw/node = SubResource( 22 )
states/throw/position = Vector2( 498, -114 )
states/walk/node = SubResource( 56 )
states/walk/position = Vector2( 184, 302 )
transitions = [ "idle", "throw", SubResource( 32 ), "throw", "idle", SubResource( 33 ), "idle", "leap", SubResource( 34 ), "leap", "idle", SubResource( 35 ), "throw", "death", SubResource( 46 ), "death", "throw", SubResource( 47 ), "idle", "death", SubResource( 48 ), "death", "idle", SubResource( 49 ), "leap", "death", SubResource( 50 ), "death", "leap", SubResource( 51 ), "walk", "idle", SubResource( 57 ), "idle", "walk", SubResource( 58 ), "throw", "walk", SubResource( 59 ), "walk", "throw", SubResource( 60 ), "leap", "walk", SubResource( 61 ), "walk", "leap", SubResource( 62 ), "death", "walk", SubResource( 63 ), "walk", "death", SubResource( 64 ), "throw", "leap", SubResource( 65 ), "leap", "throw", SubResource( 66 ) ]
start_node = "idle"
graph_offset = Vector2( -112, -253 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[node name="Vargas" type="RigidBody2D"]
collision_layer = 2
collision_mask = 4
mode = 2
mass = 10.0
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )
max_hp = 850.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
active = false
default_state_path = NodePath("VargasState")
target_path = NodePath("..")

[node name="VargasState" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
leap_chance = 0.2
fire_chance = 0.5
ability_cooldown = 1.5

[node name="SeekState" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
attack_range = 60.0
seek_speed = 50.0
sight_radius = 175.0
idle_state = "vargas"
attack_state = "leap"
can_fire = true
fire_range_min = 10.0
fire_delay = 2.5
melee_fire_chance = 0.85

[node name="LeapState" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="FireProjectileState" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 36 )
texture = ExtResource( 2 )
hframes = 12
vframes = 4
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/death = SubResource( 37 )
anims/idle_down = SubResource( 3 )
anims/idle_left = SubResource( 6 )
anims/idle_right = SubResource( 4 )
anims/idle_up = SubResource( 5 )
anims/leap_down = SubResource( 42 )
anims/leap_left = SubResource( 44 )
anims/leap_right = SubResource( 43 )
anims/leap_up = SubResource( 11 )
anims/throw_down = SubResource( 7 )
anims/throw_left = SubResource( 8 )
anims/throw_right = SubResource( 9 )
anims/throw_up = SubResource( 10 )
anims/walk_down = SubResource( 38 )
anims/walk_left = SubResource( 41 )
anims/walk_right = SubResource( 40 )
anims/walk_up = SubResource( 39 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 16 )
parameters/idle/blend_position = Vector2( 0.202893, 0.484868 )
parameters/leap/blend_position = Vector2( 0, 0 )
parameters/throw/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 4, 48 )
z_index = -1
texture = ExtResource( 3 )

[node name="RockSpawn" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="FireDelayTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LeapDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="INTRO" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Vargas"

[node name="DEATH" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Vargas"

[node name="PLAYER_DEATH" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Vargas"

[node name="Tween" type="Tween" parent="."]

[node name="AttackFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Vargas"

[node name="ThudFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
bus = "Sound"

[node name="HurtFX" type="Node2D" parent="."]

[node name="Hurt" type="AudioStreamPlayer" parent="HurtFX"]
stream = ExtResource( 14 )
bus = "Vargas"

[node name="Hurt2" type="AudioStreamPlayer" parent="HurtFX"]
stream = ExtResource( 15 )
bus = "Vargas"

[node name="Hurt3" type="AudioStreamPlayer" parent="HurtFX"]
stream = ExtResource( 17 )
bus = "Vargas"

[node name="Hurt4" type="AudioStreamPlayer" parent="HurtFX"]
stream = ExtResource( 16 )
bus = "Vargas"

[connection signal="body_entered" from="." to="." method="_on_Vargas_body_entered"]
